[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Toucanoban.theme" type="Theme" id=1]
[ext_resource path="res://Sprites/canopy_icon_white.png" type="Texture" id=2]
[ext_resource path="res://UI/UI_Textures/Options.png" type="Texture" id=3]
[ext_resource path="res://UI/UI_Textures/Continue.png" type="Texture" id=4]
[ext_resource path="res://Font/CreatoDisplay-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/UI_Textures/Quit.png" type="Texture" id=6]
[ext_resource path="res://UI/UI_Textures/Play.png" type="Texture" id=7]
[ext_resource path="res://UI/UI_Textures/HowTo.png" type="Texture" id=8]
[ext_resource path="res://UI/MainScreen.gd" type="Script" id=9]
[ext_resource path="res://UI/HowToPlay.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 131.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 266.0
margin_right = 330.0
margin_bottom = 77.0
texture = ExtResource( 2 )
flip_h = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 334.0
margin_right = 690.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Toucanoban"
align = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 694.0
margin_right = 758.0
margin_bottom = 77.0
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 1024.0
margin_bottom = 545.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 332.0
margin_right = 692.0
margin_bottom = 410.0
rect_min_size = Vector2( 360, 410 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/CenterContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 356.0
margin_bottom = 406.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer"]
margin_left = 38.0
margin_top = 9.0
margin_right = 314.0
margin_bottom = 393.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 2

[node name="ButtonNewGame" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_left = 80.0
margin_top = 10.0
margin_right = 276.0
margin_bottom = 54.0
text = "New Game"
align = 1

[node name="ButtonContinue" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_top = 80.0
margin_right = 64.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 7 )

[node name="Label2" type="Label" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_left = 80.0
margin_top = 90.0
margin_right = 276.0
margin_bottom = 134.0
text = "Continue"
align = 1

[node name="ButtonOptions" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_top = 160.0
margin_right = 64.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 3 )

[node name="Label3" type="Label" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_left = 80.0
margin_top = 170.0
margin_right = 276.0
margin_bottom = 214.0
text = "Options"
align = 1

[node name="ButtonHowToPlay" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_top = 240.0
margin_right = 64.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 8 )

[node name="Label4" type="Label" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_left = 80.0
margin_top = 250.0
margin_right = 276.0
margin_bottom = 294.0
text = "How To Play"
align = 1

[node name="ButtonQuit" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_top = 320.0
margin_right = 64.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 6 )

[node name="Label5" type="Label" parent="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer"]
margin_left = 80.0
margin_top = 330.0
margin_right = 276.0
margin_bottom = 374.0
text = "Quit"
align = 1

[node name="HowToPlay" parent="." instance=ExtResource( 10 )]

[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer/ButtonNewGame" to="." method="_on_ButtonNewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer/ButtonContinue" to="." method="_on_ButtonContinue_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer/ButtonHowToPlay" to="." method="_on_ButtonHowToPlay_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/CenterContainer/GridContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
